# tableinfo

./: README.md  tableinfo.cabal
src/: Main.hs
