name:                tableinfo
version:             0.1.0.0
synopsis:            Try and determine structure of messy tables
description:         A command-line tool to try and guess what the structure of a PostgreSQL table is.
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           (c) 2016 Ivan Lazar Miljenovic
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable tableinfo
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , optparse-applicative == 0.11.*
                     , postgresql-simple == 0.4.*
  hs-source-dirs:      src
  default-language:    Haskell2010
